--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 PORT=5000
 MONGODB_URI='mongodb+srv://gstraghvendra:Gstraghvendra123@cluster0.mevaky4.mongodb.net/?retryWrites=true&w=majority'
+USER_MAIL='gstsuvidhakendraghvendra@gmail.com'
+USER_PASSWORD='xhvv spbp idnq upat'
+ADMIN_MAIL='suryatomar303@gmail.com'
