created userCOunt api

--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ PORT=5000
 MONGODB_URI='mongodb+srv://gstraghvendra:Gstraghvendra123@cluster0.mevaky4.mongodb.net/?retryWrites=true&w=majority'
 USER_MAIL='gstsuvidhakendraghvendra@gmail.com'
 USER_PASSWORD='xhvv spbp idnq upat'
-ADMIN_MAIL='gskprayagraj@gmail.com'
+ADMIN_MAIL='suryatomar303@gmail.com'
